[gd_scene load_steps=4 format=3 uid="uid://ccipqeqmthtfr"]

[ext_resource type="Script" path="res://src/ui_components/transfers/contract_offer/contract_offer.gd" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="2"]
[ext_resource type="Script" path="res://src/ui_components/base/defaults/default_button.gd" id="3_ycdro"]

[node name="ContractOffer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Info" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CONTRACT"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 4

[node name="IncomeLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "INCOME"

[node name="IncomeLess" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "-"
script = ExtResource("3_ycdro")

[node name="Income" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="IncomeMore" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "+"
script = ExtResource("3_ycdro")

[node name="YearsLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "YEAR"

[node name="YearsLess" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "-"
script = ExtResource("3_ycdro")

[node name="Years" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"

[node name="YearsMore" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "+"
script = ExtResource("3_ycdro")

[node name="BuyClauseLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BUY_CLAUSE"

[node name="BuyClauseLess" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "-"
script = ExtResource("3_ycdro")

[node name="BuyClause" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="BuyClauseMore" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "+"
script = ExtResource("3_ycdro")

[node name="Confirm" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONFIRM"
script = ExtResource("3_ycdro")

[node name="Cancel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CANCEL"

[connection signal="pressed" from="VBoxContainer/GridContainer/IncomeLess" to="." method="_on_income_less_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IncomeMore" to="." method="_on_income_more_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/YearsLess" to="." method="_on_years_less_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/YearsMore" to="." method="_on_years_more_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BuyClauseLess" to="." method="_on_buy_clause_less_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BuyClauseMore" to="." method="_on_buy_clause_more_pressed"]
[connection signal="pressed" from="VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
